# qt_playground

./: .gitignore  CMakeLists.txt  DummyWidget.qml  Main.qml  NavButton.qml  README.md  datamodel.cpp  datamodel.h  main.cpp  navigatorcaptain.cpp  navigatorcaptain.h
.github/workflows/: build-msvc.yml  build-wasm.yml  deploy-pages.yml
ExternalModules/: SimpleMenu.qml  simplemenumodel.cpp  simplemenumodel.h
ExternalVaillantModules/: CMakeLists.txt  SimpleMenu.qml  simplemenumodel.cpp  simplemenumodel.h
